<resources>
    <string name="app_name">JustJava</string>
    <string name="txt_checkBox">Toppings</string>
    <string name="txt_checkBoxMessage">Whipped Cream</string>
    <string name="txt_ChocolatecheckBox">Chocolate</string>
    <string name="txt_quantity">Quantity</string>
    <string name="btn_decrement">-</string>
    <string name="txt_quantity_text_view">0</string>
    <string name="btn_increment">+</string>
    <string name="txt_order_Summary">Order Summary</string>
    <string name="txt_order_Summary_textView">$0</string>
    <string name="btn_submitOrder">Submit Order</string>
    <string name="hint_edit_text">Enter Your Name</string>
</resources>
