<?xml version="1.0" encoding="utf-8" ?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/txt_NameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/hint_edit_text"
            android:inputType="text" />
        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/txt_checkBox" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_ChocolatecheckBox"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/whipped_cream_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_checkBoxMessage"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/txt_quantity"
            style="@style/HeaderTextStyle"
            android:text="@string/txt_quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn__decrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_dark"
                android:onClick="decrement"
                android:text="@string/btn_decrement" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/txt_quantity_text_view"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_increment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_dark"
                android:onClick="increment"
                android:text="@string/btn_increment" />
        </LinearLayout>


        <TextView
            android:id="@+id/txt_order_Summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_order_Summary"
            android:textAllCaps="true"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_order_Summary_textView"
            android:textAllCaps="true"
            android:textColor="#000000" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_orange_dark"
            android:onClick="submitOrder"
            android:text="@string/btn_submitOrder" />

    </LinearLayout>
</ScrollView>